# cmake-cling-tidy-example

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
